# internal/models/vocabulary.go
@@ -1,10 +1,16 @@
 package models
 
+import (
+	"time"
+
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
 type Vocabulary struct {
-	ID         string   `json:"id" `
-	English    string   `json:"english" `
-	Vietnamese string   `json:"vietnamese" `
-	Tag        []string `json:"tag" `
-	Mp3        string   `json:"mp3" `
-	CreatedAt  string   `json:"created_at" `
+	ID         primitive.ObjectID `bson:"_id" json:"id"`
+	English    string             `json:"english" `
+	Vietnamese string             `json:"vietnamese" `
+	Tag        []string           `json:"tag" `
+	Mp3        string             `json:"mp3" `
+	CreatedAt  time.Time          `json:"created_at" `
 }
