# internal/server/routes.go
@@ -3,10 +3,10 @@ package server
 import (
 	_ "engractice/docs" // docs is generated by Swag CLI, you have to import it.
 	"engractice/internal/controllers"
+	"engractice/internal/database"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/swagger"
-	"engractice/internal/database"
 )
 
 func (s *FiberServer) RegisterFiberRoutes(vocabulary *controllers.VocabularyController) {
@@ -22,11 +22,14 @@ func (s *FiberServer) RegisterFiberRoutes(vocabulary *controllers.VocabularyCont
 	s.App.Get("/health", healthHandler)
 
 	v1 := s.App.Group("/api/v1")
+	v1.Post("/vocabulary", vocabulary.Create)
 	v1.Get("/vocabulary", vocabulary.GetAll)
+	v1.Get("/vocabulary/:id", vocabulary.GetByID)
+	v1.Put("/vocabulary/:id", vocabulary.Update)
+	v1.Delete("/vocabulary/:id", vocabulary.Delete)
+	v1.Get("/vocabulary/search", vocabulary.Search)
 
 }
-
-
 
 func healthHandler(c *fiber.Ctx) error {
 	db := database.New()
